# fastapi-faust

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  logging.ini  pyproject.toml
app/: api.py  rich_logging.py
app/worker/: __init__.py
app/worker/tasks/: greeting.py
