[tool.poetry]
name = "fastapi-faust-streaming"
version = "0.0.1"
description = ""
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
faust-streaming = { extras = ["uvloop"], version = "^0.10.0" }
black = "^22.12.0"
httptools = "^0.5.0"
rich = "^12.6.0"


[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
