[tool.poetry]
name = "fastapi-faust-streaming"
version = "0.0.2"
description = ""
authors = ["Jakub Miazek <the@grillazz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
faust-streaming = { extras = ["uvloop"], version = "*" }
black = "*"
httptools = "*"
rich = "*"


[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
